<resources>
    <string name="app_name">激光恒温锡焊系统</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="menu_home">首页</string>
    <string name="menu_wenkongyi">温控仪相关功能</string>
    <string name="menu_weld">焊接参数设置</string>
    <string name="menu_systemSet">系统参数设置</string>
    <string name="menu_manual">手动控制参数设置</string>
    <string name="menu_songsi">送丝参数设置</string>
    <string name="menu_guhua">固化参数</string>
    <string name="menu_exit">退出</string>
    <string name="Increase">Increase</string>
    <string name="Decline">Decline</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>