<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.system.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_temp_control"
        android:name="com.example.system.ui.temp_control.TempControlFragment"
        android:label="@string/menu_wenkongyi"
        tools:layout="@layout/fragment_temp_control" />

    <fragment
        android:id="@+id/nav_weld"
        android:name="com.example.system.ui.weld.WeldFragment"
        android:label="@string/menu_weld"
        tools:layout="@layout/fragment_weld" />

    <fragment
        android:id="@+id/nav_system"
        android:name="com.example.system.ui.system.SystemFragment"
        android:label="@string/menu_systemSet"
        tools:layout="@layout/fragment_system" />

    <fragment
        android:id="@+id/nav_manual"
        android:name="com.example.system.ui.manual.ManualFragment"
        android:label="@string/menu_manual"
        tools:layout="@layout/fragment_manual" />

    <fragment
        android:id="@+id/nav_wire_feed"
        android:name="com.example.system.ui.wire_feed.WireFeedFragment"
        android:label="@string/menu_songsi"
        tools:layout="@layout/fragment_wire_feed" />
</navigation>